--- a/homework6.tex
+++ b/homework6.tex
@@ -225,9 +225,9 @@ end Behavioral;
 
     \begin{table}
       \centering
-      \begin{tabular}{|c|c|c|c|c|}
+      \begin{tabular}{|c|c|c|c|}
         \hline
-        A & B & OP\_CODE & C_IN \\
+        A & B & OP\_CODE & C\_IN \\
         \hline
         "0101" & "0100" & "0000" & '0' \\
         \hline
@@ -406,7 +406,23 @@ END;
       \section{RTL Schematics and Implemented Summary}
       \label{sec:rsnis}
 
+\begin{figure}
+\centering
+\includegraphics[width=1\linewidth]{homework6-8}
+\caption{The RTL Schematic of ALU (1)}
+\label{fig:homework6-8}
+\end{figure}
 
-      
+
+    \begin{figure}
+      \centering
+      \includegraphics[width=1\linewidth]{homework6-7}
+      \caption{The RTL Schematic of ALU (2)}
+      \label{fig:homework6-7}
+    \end{figure}
     
+
+    The RTL schematics of the ALU are the figure \ref{fig:homework6-8} and the figure \ref{fig:homework6-7}.
+    
+   
 \end{document}
