--- a/homework6.tex
+++ b/homework6.tex
@@ -400,6 +400,9 @@ END;
       \end{figure}
 
       The highest frequency of the both kinds of the ALU is 100MHz, but that might be unstable.
+      The delays of the signal is about 6 ns, for both two kinds ALU.
+      So the frenquency of the highest about $$100MHz \times \frac{10}{6} = \frac{500}{3}$$
+      is about $166.66MHz$.    
       So the stable highest frequency of the kinds of the ALU is 50MHz, half of the 100Mhz.
       And the uesr might has the change to overclock.
 
