--- a/homework6.tex
+++ b/homework6.tex
@@ -12,6 +12,7 @@
 \author{李约瀚 \\ 14130140331 \\ qinka@live.com \\ me@qinka.pro}
 
 \usepackage{listings}
+\lstset{breaklines,numbers=left}
 \usepackage{hyperref}
 
 \begin{document}
@@ -448,6 +449,7 @@ END;
             \hline Number of occupied Slices & 10
             & 2,278 & 1\%
             \\ 
+            \hline Number of MUXCYs used & 0 & 4,556 & 0\% \\
             \hline Number of LUT Flip Flop pairs used & 23
             &  &  \\ 
             \hline Number of bonded IOBs & 17
@@ -468,6 +470,7 @@ END;
             \hline Number of Slice LUTs & 23 & 9,112 & 1\% \\ 
             \hline Number of occupied Slices & 10 & 2,278 & 1\% \\ 
             \hline Number of MUXCYs used & 0 & 4,556 & 0\% \\ 
+            \hline Number of LUT Flip Flop pairs used & 23 & & \\
             \hline Number of bonded IOBs & 17 & 232 & 7\% \\ 
             \hline Average Fanout of Non-Clock Nets & 3.42
             &  &  \\ 
